Update landing.html for assignment

--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -57,7 +57,7 @@
                 <a class="link" id = "Analytics-Link">
                     <div class="page-block">
                         <div class="page-content">
-                            <h1 class="page-heading">Analytics</h1>
+                            <button class="page-heading" href= "https://www.codebytes.codes/" id="page-button">Attendance</button>
                             <p class="page-message">(scroll up to go back)</p>
                         </div>
          
@@ -84,9 +84,9 @@
     
    // function redirect1(){ window.location = "/data"; }
 
-    document.getElementById("nav-logout").addEventListener("click", redirect2);
+    //document.getElementById("nav-logout").addEventListener("click", redirect2);
     
-    function redirect2(){ window.location = "/logout"; }
+   // function redirect2(){ window.location = "/logout"; }
 
 </script>
     
