--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent" style="padding-right: 5vh; font-size: larger;">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active" style="text-align: end;">
-             <button id= "logout-button"> <a class="nav-link text-right" id="nav-logout" style= "color: black; text-align: right;"> Logout<span class="sr-only"></span></a></button>
+             <button id= "logout-button"> <a class="nav-link text-right" id="nav-logout" href = "../templates/login.html"    style= "color: black; text-align: right;"> Logout<span class="sr-only"></span></a></button>
             </li>
             
           </ul>
@@ -57,7 +57,7 @@
                 <a class="link" id = "Analytics-Link">
                     <div class="page-block">
                         <div class="page-content">
-                            <button class="page-heading" href= "https://www.codebytes.codes/" id="page-button">Attendance</button>
+                           <a href="https://www.codebytes.codes/"> <button class="page-heading"  id="page-button">Attendance</button></a>
                             <p class="page-message">(scroll up to go back)</p>
                         </div>
          
